--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+echo "# github_page_test" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin https://mskimsj.github.io/so_ojin/
+
 <!DOCTYPE html>
 <html>
     <body>
