--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@ git remote add origin https://mskimsj.github.io/so_ojin/
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hi.</h1>
+        <h1 style="color:#0064FB; font-size: 600%;">Hi.</h1>
     </body>
 </html>
