--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
-
-
 <!DOCTYPE html>
+<head>
+	<meta charset="UTF-8">
+	<title>CSS Box Model</title>
+	<style>
+		div {
+			width: 1440px;
+			padding: 10px;
+			border: solid #ffffff;
+			margin: 0;
+		}
+	</style>
+</head>
 <html>
     <body>
-        <h1 style="color:#0064FB; font-size: 600%;">Hi.</h1>
+        <h1 style="color:#0064FB; font-size: 400%;">Hi.</h1>
     </body>
 </html>
