--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>CSS Box Model</title>
+	<title>GNB</title>
 	<style>
 		div {
 			width: 1440px;
 			padding: 10px;
-			border: solid #ffffff;
+			border: solid #dddd33;
 			margin: 0;
 		}
 	</style>
