--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>GNB</title>
+	<title>so_ojin</title>
 	<style>
 		div {
 			width: 1440px;
