--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<title>so_ojin</title>
 	<style>
-		div {
+		#GNB {
 			width: 1440px;
 			padding: 10px;
 			border: solid #dddd33;
@@ -12,7 +12,20 @@
 	</style>
 </head>
 <html>
-    <body>
-        <h1 style="color:#0064FB; font-size: 400%;">Hi.</h1>
+    <nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Project</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Blog</a></li>
+		</ul>
+	</nav>
+	
+    <div id="GNB">
+		<ul>Home</ul>
+		<ul>Project</ul>
+		<ul>About</ul>
+		<ul>Blog</ul>
+	</div>
     </body>
 </html>
