--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		#GNB {
 			width: 1440px;
 			padding: 10px;
-			border: solid #dddd33;
 			margin: 0;
 		}
 	</style>
 </head>
+
 <html>
-    <nav>
+    <nav id="GNB">
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Project</a></li>
@@ -20,12 +20,5 @@
 			<li><a href="#">Blog</a></li>
 		</ul>
 	</nav>
-	
-    <div id="GNB">
-		<ul>Home</ul>
-		<ul>Project</ul>
-		<ul>About</ul>
-		<ul>Blog</ul>
-	</div>
     </body>
 </html>
