--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<title>so_ojin</title>
 	<style>
 		#GNB {
+			height: 26px;
+			width: 248px;
+			margin: 32px 0px;
+		}
+		.menu {
 			width: 1440px;
 			padding: 10px;
 			margin: 0;
@@ -14,10 +19,10 @@
 <html>
     <nav id="GNB">
 		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Project</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a class="menu" href="#">Home</a></li>
+			<li><a class="menu" href="#">Project</a></li>
+			<li><a class="menu" href="#">About</a></li>
+			<li><a class="menu" href="#">Blog</a></li>
 		</ul>
 	</nav>
     </body>
