--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
 			width: 248px;
 			margin: 32px 0px;
 		}
+		#GNB ul li {
+			list-style: none;
+			color: #111111;
+			background-color: #ffffff;
+			float: left;
+			line-height: 21px;
+			vertical-align: middle;
+			text-align: center;
+		}
+		#GNB .menu {
+			text-decoration: none;
+			color: #111111;
+			display: block;
+			font-family: "IBM Plex Sans";
+			font-weight: normal;
+			font-size: 16px;
+		}
+		#GNB .menu:hover {
+			color: #0064FB;
+			font-weight: bold;
+			font-family: "IMB Plex Sans";
+			font-size: 16px;
+		}
 		.menu {
 			width: 1440px;
 			padding: 10px;
