--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<meta charset="UTF-8">
 	<title>so_ojin</title>
 	<style>
+		#GNB {
+			height: 88px;
+			width: 1440px;
+		}
 		#GNB ul li {
 			list-style: none;
 			color: #111111;
