--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			color: #111111;
 			display: block;
 			font-family: "IBM Plex Sans";
-			font-weight: normal;
+			font-weight: regular;
 			font-size: 16px;
 		}
 		#GNB .menu:hover {
