--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<meta charset="UTF-8">
 	<title>so_ojin</title>
 	<style>
-		#GNB {
+		/*#GNB {
 			height: 88px;
 			width: 1440px;
-		}
+		}*/
 		#GNB ul li {
 			list-style: none;
 			color: #111111;
