--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 			height: 88px;
 			width: 1440px;
 		}*/
+		html {
+			width: 1440px;
+			height: 24px;
+			margin: 32px 0px;
+		}
 		#GNB ul li {
 			list-style: none;
 			color: #111111;
