--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
 			height: 88px;
 			width: 1440px;
 		}*/
-		html {
-			width: 1440px;
-			height: 24px;
-			margin: 32px 0px;
-		}
 		#GNB ul li {
 			list-style: none;
 			color: #111111;
@@ -27,6 +22,7 @@
 			font-family: "IBM Plex Sans";
 			font-weight: regular;
 			font-size: 16px;
+			float: right;
 		}
 		#GNB .menu:hover {
 			color: #0064FB;
