--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<meta charset="UTF-8">
 	<title>so_ojin</title>
 	<style>
-		/*#GNB {
-			height: 88px;
-			width: 1440px;
-		}*/
+		#GNB {
+			position: relative;
+			left: 999px;
+		}
 		#GNB ul li {
 			list-style: none;
 			color: #111111;
@@ -22,7 +22,6 @@
 			font-family: "IBM Plex Sans";
 			font-weight: regular;
 			font-size: 16px;
-			float: right;
 		}
 		#GNB .menu:hover {
 			color: #0064FB;
