--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>so_ojin</title>
 	<style>
 		#GNB {
-			position: relative;
-			right: 194px;
+			float: right;
+			padding: 32px 10px;
 		}
 		#GNB ul li {
 			list-style: none;
