--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 			font-family: "IMB Plex Sans";
 			font-size: 16px;
 		}
+		#GNB .menu:active{
+			color: #0064fb;
+			font-family: "IBM Plex Sans";
+			font-weight: bold;
+			font-size: 16px;
+		}
 		.menu {
 			width: 53px;
 			padding: 10px;
