--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		}
 		#GNB .menu:hover {
 			color: #0064FB;
-			font-weight: regular;
+			font-weight: bold;
 			font-family: "IMB Plex Sans";
 			font-size: 16px;
 		}
