--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>so_ojin</title>
 	<style>
 		#GNB {
-			float: left;
+			float: right;
 			padding: 0px 72px;
 		}
 		#GNB ul li {
@@ -47,9 +47,9 @@
     <nav id="GNB">
 		<ul>
 			<li><a class="menu" href="#">Home</a></li>
-			<li><a class="menu" href="#">Project</a></li>
-			<li><a class="menu" href="#">About</a></li>
 			<li><a class="menu" href="#">Blog</a></li>
+			<li><a class="menu" href="#">Portfolio</a></li>
+			<li><a class="menu" href="#">About</a></li>
 		</ul>
 	</nav>
     </body>
