--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
 <html>
     <nav id="GNB">
 		<ul>
-			<li><a class="menu" href="#">Home</a></li>
-			<li><a class="menu" href="#">Blog</a></li>
-			<li><a class="menu" href="#">Portfolio</a></li>
-			<li><a class="menu" href="#">About</a></li>
+			<li><a class="menu" href="#home">Home</a></li>
+			<li><a class="menu" href="#blog">Blog</a></li>
+			<li><a class="menu" href="#portfolio">Portfolio</a></li>
+			<li><a class="menu" href="#about">About</a></li>
 		</ul>
 	</nav>
-    </body>
+	<body>
+		<img src="melo.jpg" alt="none">
+		<img src="drama2.jpg" alt="none">
+	</body>
 </html>
