--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 		</ul>
 	</nav>
 	<body>
-		<img src="melo.jpg" alt="none">
-		<img src="drama2.jpg" alt="none">
+		<img src="melo.jpg" alt="none" width="1200px">
+
+		<img src="drama2.jpg" alt="style size" style="width:1280px; height:720;">
 	</body>
 </html>
