--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 			padding: 10px;
 			margin: 0;
 		}
+		#img {
+			max-width: 100%;
+			max-height: 100%;
+			bottom:0;
+			left:0;
+			margin: auto;
+			overflow: auto;
+			position: fixed;
+			right: 0;
+			top: 0;
+		}
 	</style>
 </head>
 
@@ -52,9 +63,8 @@
 			<li><a class="menu" href="#about">About</a></li>
 		</ul>
 	</nav>
-	<body>
-		<img src="melo.jpg" alt="none" width="1200px">
-
-		<img src="drama2.jpg" alt="style size" style="width:1280px; height:720;">
-	</body>
+	<div id="img">
+		<img src="melo.jpg" alt="none">
+		<img src="drama2.jpg" alt="nooone">
+	</div>
 </html>
