--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 			bottom:0;
 			left:0;
 			margin: auto;
-			overflow: auto;
 			position: fixed;
 			right: 0;
-			top: 0;
+			top: 88px;
 		}
 	</style>
 </head>
