--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		#GNB {
 			float: right;
 			padding: 0px 72px;
+			text-align: center;
 		}
 		#GNB ul li {
 			list-style: none;
@@ -40,16 +41,6 @@
 			padding: 10px;
 			margin: 0;
 		}
-		#img {
-			max-width: 100%;
-			max-height: 100%;
-			bottom:0;
-			left:0;
-			margin: auto;
-			position: fixed;
-			right: 0;
-			top: 88px;
-		}
 	</style>
 </head>
 
@@ -62,8 +53,4 @@
 			<li><a class="menu" href="#about">About</a></li>
 		</ul>
 	</nav>
-	<div id="img">
-		<img src="melo.jpg" alt="none">
-		<img src="drama2.jpg" alt="nooone">
-	</div>
 </html>
