--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 <html>
     <nav id="GNB">
 		<ul>
-			<li><a class="menu" href="#home">Home</a></li>
+			<li><a class="menu" href="#calendar">Calendar</a></li>
+			<li><a class="menu" href="#research">Research</a></li>
+			<li><a class="menu" href="#soso">Drawing</a></li>
 			<li><a class="menu" href="#blog">Blog</a></li>
-			<li><a class="menu" href="#portfolio">Portfolio</a></li>
-			<li><a class="menu" href="#about">About</a></li>
 		</ul>
 	</nav>
 </html>
