--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			font-size: 16px;
 		}
 		.menu {
-			width: 53px;
+			width: 65px;
 			padding: 10px;
 			margin: 0;
 		}
@@ -47,9 +47,8 @@
 <html>
     <nav id="GNB">
 		<ul>
+			<li><a class="menu" hreft="#home">Home</a></li>
 			<li><a class="menu" href="#calendar">Calendar</a></li>
-			<li><a class="menu" href="#research">Research</a></li>
-			<li><a class="menu" href="#soso">Drawing</a></li>
 			<li><a class="menu" href="#blog">Blog</a></li>
 		</ul>
 	</nav>
