--- a/index.html
+++ b/index.html
@@ -41,17 +41,25 @@
 			padding: 10px;
 			margin: 0;
 		}
+		#home {
+			border: 1px; #111111
+			height: 680px;
+			text-align:center;
+		}
 	</style>
 </head>
 
 <html>
-    <nav id="GNB">
+    <div id="GNB">
 		<ul>
 			<li><a class="menu" hreft="#home">Home</a></li>
 			<li><a class="menu" href="#calendar">Calendar</a></li>
 			<li><a class="menu" href="#blog">Blog</a></li>
 		</ul>
-	</nav>
+    </div>
+	<div id="home">
+		<p>home</p>
+	</div>
 	<body>
 		
 	</body>
