--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		#home {
 			border: 1px; #111111
 			height: 680px;
-			text-align:center;
+			float: left;
 		}
 	</style>
 </head>
@@ -59,6 +59,11 @@
     </div>
 	<div id="home">
 		<p>home</p>
+	</div>
+	<div id="Blog">
+
+	</div>
+
 	</div>
 	<body>
 		
