--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 			margin: 0;
 		}
 		#home {
-			border: 1px; #111111
+			background-color: #339999;
+			color: white;
 			height: 680px;
 			float: left;
 		}
@@ -61,7 +62,7 @@
 		<p>home</p>
 	</div>
 	<div id="Blog">
-
+		<p></p>
 	</div>
 
 	</div>
