--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>so_ojin</title>
 	<style>
 		#GNB {
+			background-color: wheat;
+			height: 72px;
 			float: right;
 			padding: 0px 72px;
 			text-align: center;
@@ -44,6 +46,7 @@
 		#home {
 			background-color: #339999;
 			color: white;
+			widows: 1400px;
 			height: 680px;
 			float: left;
 		}
@@ -64,9 +67,4 @@
 	<div id="Blog">
 		<p></p>
 	</div>
-
-	</div>
-	<body>
-		
-	</body>
 </html>
