--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		.page {
 			background-color: thistle;
 			overflow: auto;
+			width: 100%;
 		}
 		.GNB {
 			background-color: wheat;
+			width: 100%;
 			height: 72px;
 			float: right;
 			padding: 0px 72px;
@@ -49,7 +51,7 @@
 		#home {
 			background-color: #339999;
 			color: white;
-			widows: 1400px;
+			widows: 100%;
 			height: 680px;
 			float: left;
 		}
