--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		.GNB ul li {
 			list-style: none;
 			color: #111111;
-			background-color: #ffffff;
 			line-height: 21px;
 			text-align: center;
+			float: right;
 		}
 		.GNB #menu {
 			text-decoration: none;
@@ -49,7 +49,7 @@
 		}
 		#home {
 			background-color: #339999;
-			color: white;
+			color: #111111;
 			widows: 100%;
 			height: 680px;
 			float: left;
