--- a/index.html
+++ b/index.html
@@ -1,80 +1,47 @@
 <!DOCTYPE html>
-<head>
-	<meta charset="UTF-8">
-	<title>so_ojin</title>
-	<style>
-		.page {
-			background-color: thistle;
-			overflow: auto;
-			width: 100%;
-		}
-		.GNB {
-			background-color: wheat;
-			width: 100%;
-			height: 72px;
-			float: right;
-			padding: 0px 72px;
-		}
-		.GNB ul li {
-			list-style: none;
-			color: #111111;
-			line-height: 21px;
-			text-align: center;
-			float: right;
-		}
-		.GNB #menu {
-			text-decoration: none;
-			color: #111111;
-			display: block;
-			font-family: "IBM Plex Sans";
-			font-weight: regular;
-			font-size: 16px;
-		}
-		.GNB #menu:hover {
-			color: #0064FB;
-			font-weight: bold;
-			font-family: "IMB Plex Sans";
-			font-size: 16px;
-		}
-		.GNB #menu:active{
-			color: #0064fb;
-			font-family: "IBM Plex Sans";
-			font-weight: bold;
-			font-size: 16px;
-		}
-		#menu {
-			width: 65px;
-			padding: 10px;
-			margin: 0;
-		}
-		#home {
-			background-color: #339999;
-			color: #111111;
-			widows: 100%;
-			height: 680px;
-			float: left;
-		}
-		h2 {text-align: center;}
-	</style>
-</head>
+<html lang="ko">
+	<head>
+		<meta charset="UTF-8">
+		<title>soojin</title>
+		<style>
+			div .page {
+				background-color: thistle;
+				overflow: auto;
+			}
+			nav {
+				background-color: tomato;
+				width: 100%;
+			}
+			nav ul li {
+				float: right;
+				text-align: left;
+				font-family: "IBM Plex Sans";
+				font-size: 16px;
+				font-weight: regular;
+				list-style: none;
+			}
+			section {
+				background-color: yellowgreen;
+				width: 100%;
+				height: 680px;
+			}
+		</style>
+	</head>
 
-<html>
-	<div class="page">
-    	<div class="GNB">
-			<ul>
-				<li><a id="menu" hreft="#home">Home</a></li>
-				<li><a id="menu" href="#calendar">Calendar</a></li>
-				<li><a id="menu" href="#blog">Blog</a></li>
-			</ul>
-    	</div>
-		<div class="home">
-			<h2>Home</h2>
+	<body>
+		<div class="page">
+			<nav>
+				<ul>
+					<li>Home</li>
+					<li>Blog</li>
+				</ul>
+			</nav>
+			<section>
+				<h2>home</h2>
+			</section>
+			<footer>
+				<h2>footer</h2>
+			</footer>
 		</div>
-		<div class="Blog">
-			<h2>Blog</h2>
-		</div>
-		<div class="footer">
-			<h2>Footer</h2>
-		</div>
-</div>
+	</body>
 </html>
