--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			nav {
 				background-color: tomato;
 				width: 100%;
+				height: 72px;
 			}
 			nav ul li {
 				float: right;
@@ -19,11 +20,21 @@
 				font-size: 16px;
 				font-weight: regular;
 				list-style: none;
+				line-height: 24px;
+			}
+			nav .menu {
+				padding: 32px 24px;
+				width: 53px;
 			}
 			section {
 				background-color: yellowgreen;
 				width: 100%;
 				height: 680px;
+			}
+			footer {
+				background-color: teal;
+				width: 100%;
+				height: 72px;
 			}
 		</style>
 	</head>
@@ -32,8 +43,8 @@
 		<div class="page">
 			<nav>
 				<ul>
-					<li>Home</li>
-					<li>Blog</li>
+					<li class="menu">Home</li>
+					<li class="menu">Blog</li>
 				</ul>
 			</nav>
 			<section>
