--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				height: 72px;
 			}
 			nav ul li {
-				float: right;
+				float: left;
 				text-align: left;
 				font-family: "IBM Plex Sans";
 				font-size: 16px;
@@ -23,8 +23,8 @@
 				line-height: 24px;
 			}
 			nav .menu {
-				padding: 32px 24px;
-				width: 53px;
+				padding: 24px 10px;
+				width: 48px;
 			}
 			section {
 				background-color: yellowgreen;
