--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 				overflow: auto;
 			}
 			nav {
-				background-color: tomato;
+				border: #111111;
 				width: 100%;
 				height: 72px;
+				float: right;
 			}
 			nav ul li {
 				float: left;
