--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				height: 72px;
 				float: right;
 			}
-			nav ul li {
+			ul li {
 				float: left;
 				text-align: left;
 				font-family: "IBM Plex Sans";
@@ -52,7 +52,10 @@
 				<h2>home</h2>
 			</section>
 			<footer>
-				<h2>footer</h2>
+				<ul>
+					<li class="contact">Notion</li>
+					<li class="contact">mail</li>
+				</ul>
 			</footer>
 		</div>
 	</body>
