--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 <html>
     <nav id="GNB">
 		<ul>
-			<li><a class="menu" hreft="#home">Home</a></li>
-			<li><a class="menu" href="#calendar">Calendar</a></li>
-			<li><a class="menu" href="#blog">Blog</a></li>
+			<li><a class="menu" hreft="#Home">Home</a></li>
+			<li><a class="menu" href="#Blog">Blog</a></li>
+			<li><a class="menu" href="#Project">Project</a></li>
+			<li><a class="menu" href="#About">About</a></li>
 		</ul>
 	</nav>
 </html>
