--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
 			font-family: "IMB Plex Sans";
 			font-size: 16px;
 		}
-		#GNB .menu:active{
+		#GNB .menu:focus{
 			color: #0064fb;
 			font-family: "IBM Plex Sans";
 			font-weight: bold;
